# prediction-market-sdk

./: .coverage  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  run_integration.sh  update.py  update_tests.py
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  lint.yml  pypi-publish.yml
examples/: 01_market_intelligence_9router.py  01_omniroute_analysis.py
src/prediction_market_sdk/: __init__.py  kalshi.py  llm_integration.py  orderbook.py  polymarket.py  ws.py
tests/: test_http_errors.py  test_kalshi.py  test_llm_integration.py  test_ws.py
tests/integration/: test_live_polymarket.py
