[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-market-sdk"
version = "0.1.0"
description = "High-speed Exchange SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx", "websockets", "msgspec", "cryptography"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_market_sdk"]
